2004-03-28  Elliott Hughes  <enh@acm.org>

	* src/decl.cpp: Accept default access for serialVersionUID; it's
	common existing practice.
	* src/error.cpp: Put all the serialization-related warnings
	together in the +Pserial group.

2004-03-28  Elliott Hughes  <enh@acm.org>

	* src/expr.cpp: Fix another assertion compiling Sun's
	JDK 1.4.1 source; don't ask FindInaccessibleType to try with an
	AstName whose base_opt is non-null, because it doesn't handle
	that case. We can now compile the JDK as well as javac again.

2004-03-28  Elliott Hughes  <enh@acm.org>

	* src/expr.cpp: Fix an assertion compiling Sun's
	JDK 1.4.1 source; it looks like the call to AddDependence in
	ProcessClassLiteral was lifted too high, and the dependence should
	be on the java.lang class that wraps the primitive type, not
	the primitive type itself.
	* src/depend.cpp, src/semantic.h: A new method to translate from
	a primitive type to its java.lang wrapper type.

2004-03-28  Elliott Hughes  <enh@acm.org>

	* src/class.h (CPUtf8Info): Fix uninitialized member data.

2004-03-27  Eric Blake  <ebb9@byu.net>

	* src/depend.cpp (AddDependence): Don't create dependencies on
	null, jikes bug 3701.
	* src/class.h (ClassFile::GetN): Make more robust (I crashed my
	system by 0-filling several megabytes on a short but invalid
	.class file).
	(UnknownAttribute): New class, split out from AttributeInfo to
	reduce attribute memory needs.
	* src/class.cpp: Ditto.

2004-03-26  Eric Blake  <ebb9@byu.net>

	* src/definite.cpp (DefiniteSwitchStatement): Fix problems with
	switch statements without a default label.

2004-03-25  Eric Blake  <ebb9@byu.net>

	* configure.ac (AC_CXX_RTTI): Compilers have improved in 2 years,
	don't cripple the RTTI check.
	* aclocal.m4: Regenerate with automake 1.8.3.
	* Makefile.in: Regenerate.
	* configure: Ditto.
	* doc/Makefile.in: Ditto.
	* src/Makefile.in: Ditto.

	* src/stream.h (TokenIndex, BadToken): Move to...
	* src/platform.h (TokenIndex, BAD_TOKEN): ...here. This reduces