@@ -26,14 +26,13 @@ void Semantic::ProcessVariableInitializer(AstVariableDeclarator* variable_declar
         return;
     }
 
-    AstArrayInitializer* array_initializer = variable_declarator ->
-        variable_initializer_opt -> ArrayInitializerCast();
+    AstExpression* init =
+        (AstExpression*) variable_declarator -> variable_initializer_opt;
+    AstArrayInitializer* array_initializer = init -> ArrayInitializerCast();
     if (array_initializer)
         ProcessArrayInitializer(array_initializer, symbol -> Type());
     else
     {
-        AstExpression* init =
-            (AstExpression*) variable_declarator -> variable_initializer_opt;
         ProcessExpressionOrStringConstant(init);
         TypeSymbol* field_type = symbol -> Type();
 
@@ -84,6 +83,23 @@ void Semantic::ProcessVariableInitializer(AstVariableDeclarator* variable_declar
             }
         }
     }
+
+    //
+    // A non-static final field initialized to a constant value wastes
+    // space in each instance, so warn about it.
+    //
+    TypeSymbol* containing_type = symbol -> owner -> TypeCast();
+    if (containing_type && ! containing_type -> ACC_INTERFACE() &&
+        symbol -> ACC_FINAL() &&
+        ! symbol -> ACC_STATIC() &&
+        init && init -> IsConstant())
+    {
+        ReportSemError(SemanticError::NON_STATIC_FINAL_CONSTANT_FIELD,
+                       variable_declarator,
+                       lex_stream ->
+                           NameString(variable_declarator -> LeftToken()));
+    }
+
     symbol -> MarkInitialized();
 }
 
